# Waste-E

./: .gitignore  =4.57.1  README.md  docker-compose.yaml  docker-compose.yml  install_dependencies.sh
ai/: camera_connector.py
carla/: carla_bridge_worker.py  docker-compose.yaml  domain_adapter.py  run_carla_sim.py  start_carla.sh  web_control.py
carla/docker/ros2_container/ros2_ws/src/carla_control_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
carla/docker/ros2_container/ros2_ws/src/carla_control_node/carla_control_node/: map_visualizer.py  pedestrian.py  pedestrian_controller.py
carla/docker/ros2_container/ros2_ws/src/carla_control_node/launch/: pedestrian_camera.launch.py
carla/docker/ros2_container/ros2_ws/src/carla_control_node/rviz/: pedestrian_view.rviz
code/: Dockerfile  carla.py  main.py  physical.py
hardware/: GPS.py  IMUsensor.py  camera.py  central_dashboard.py  coverage_planner.py  dashboard.py  geo_utils.py  main.py  make_composite.py  motor.py  motorencoder.py  pyproject.toml  requirements.txt  server.py
hardware/orangepi/: IMUsensor.py.tmp.4003.1776567072184  dashboard.py  data_sender.py  ego_state.py  mediamtx.yml  motor.py  motor_driver.py  motor_manager.py  motorencoder.py  navigation.py  pyproject.toml  recording.py  sensors.py  server.py  simple_motor.py  stream.py
hardware/rasppi/: .data_sender.py.swp  arm.py  camera.py  camera_stream.py  data_sender.py  mediamtx.yml  recording.py  requirements.txt
isaacsim/: README.md  alpamayo_inference.py  alpamayo_worker.py  config.yaml  generate_dummy_dataset.py  note.txt  (+7 more)
(+89 files in other folders)
